# mtghistory

./: .gitignore  Dockerfile  Taskfile.yaml  go.mod  go.sum  main.go  readme.md
assets/: script.js  style.css
cmd/mtghistory/: mtghistory.go
fetchcards/: fetchcards.py  pyproject.toml
pkg/mtghistory/: bulk.go  cards.go  convert.go  root.go  web.go
templates/: error.gohtml  error.tmpl  footer.gohtml  footer.tmpl  header.gohtml  header.tmpl  history.gohtml  history.tmpl  index.gohtml  index.tmpl
